--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+  <span title>Заплановані рецепти</span>
+</app-header>
 
 <ion-content>
   <app-calendar-core></app-calendar-core>
