--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+  <span title>Авторизація</span>
+</app-header>
 
 <ion-content>
   <div class="page-wrapper">
