--- a/src/app/pages/planner/planner.page.html
+++ b/src/app/pages/planner/planner.page.html
@@ -1,10 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="tabs/calendar"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
+</app-header>
 
 <ion-content [fullscreen]="true">
   <div class="planner-container">
