--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+  <span title>Всі рецепти</span>
+</app-header>
 
 <ion-content [fullscreen]="true">
   <div>
