--- a/src/app/pages/shopping-list/shopping-list.page.html
+++ b/src/app/pages/shopping-list/shopping-list.page.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header>
+  <span title>Список покупок</span>
+</app-header>
 
 <ion-content>
   <ion-segment [value]="currentTab" (ionChange)="onTabChange($event)">
