--- a/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
+++ b/src/app/pages/calendar/pages/calendar-recipy-full-view/calendar-recipy-full-view.component.html
@@ -1,13 +1,8 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="tabs/calendar"></ion-back-button>
-    </ion-buttons>
-    <ion-title *ngIf="recipy$ | async">
-      <p>{{ (recipy$ | async)!.name }}</p>
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header>
+  <ion-back-button left-button defaultHref="tabs/calendar"></ion-back-button>
+  <p title>{{ (recipy$ | async)!.name }}</p>
+</app-header>
+
 <ion-content>
   <app-recipy-full-view
     *ngIf="
