--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,37 @@
 <ion-app>
+  <ion-split-pane contentId="main-content">
+
+  <ion-menu contentId="main-content">
+    <ion-content>
+
+      <ion-list *ngIf="user$ | async" lines="none">
+        <!-- <ion-list-header>
+          Рецепти
+        </ion-list-header> -->
+
+        <ion-menu-toggle autoHide="false">
+          <ion-item routerLink="/tabs/add-recipy" routerLinkActive="active" routerDirection="root" detail="false">
+            <ion-icon slot="start" name="add-circle-outline"></ion-icon>
+            <ion-label>
+              Додати рецепт
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>       
+        <ion-menu-toggle autoHide="false">
+          <ion-item button (click)="logout()" detail="false">
+            <ion-icon slot="start" name="log-out"></ion-icon>
+            <ion-label>
+              Вийти
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        
+      </ion-list>
+      
+    </ion-content>
+  </ion-menu>
   <app-loading-overlay *ngIf="isLoading$ | async"></app-loading-overlay>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
+
+</ion-split-pane>
 </ion-app>
