add recipy component and page

--- a/src/app/pages/add-recipy/add-recipy.page.html
+++ b/src/app/pages/add-recipy/add-recipy.page.html
@@ -3,6 +3,5 @@
 </app-header>
 
 <ion-content [fullscreen]="true">
-
-
+<app-recipy-constructor [currentUser]="currentUser$ | async"></app-recipy-constructor>
 </ion-content>
