--- a/src/app/pages/add-recipy/components/add-ingredient/add-ingredient.component.html
+++ b/src/app/pages/add-recipy/components/add-ingredient/add-ingredient.component.html
@@ -1,3 +1,36 @@
-<p>
-  add-ingredient works!
-</p>
+<div class="ng-autocomplete">
+  <ng-autocomplete
+    #autocomplete
+    [data]="data"
+    [searchKeyword]="keyword"
+    placeholder="Виберіть інгридієнт"
+    (selected)="selectEvent($event)"
+    (inputCleared)="onClearSearch()"
+    [itemTemplate]="itemTemplate"
+    [notFoundTemplate]="notFoundTemplate"
+  >
+  </ng-autocomplete>
+
+  <ion-item>
+    <ion-label position="floating">Кількість</ion-label>
+    <ion-input type="tel" [(ngModel)]="quantity"></ion-input>
+  </ion-item>
+
+  <ion-radio-group [(ngModel)]="unit">
+    <ion-item *ngFor="let unit of measuringUnitsOptions">
+      <ion-label>{{ getMeasuringUnitText(unit) }}</ion-label>
+      <ion-radio slot="end" [value]="unit"></ion-radio>
+    </ion-item>
+  </ion-radio-group>
+  <ion-button expand="full" [disabled]="isAddDisabled" (click)="addIngredient()"
+    >Додати</ion-button
+  >
+
+  <ng-template #itemTemplate let-item>
+    <a [innerHTML]="item.name"></a>
+  </ng-template>
+
+  <ng-template #notFoundTemplate let-notFound>
+    <div [innerHTML]="notFound"></div>
+  </ng-template>
+</div>
