add draft recipy

--- a/src/app/pages/add-recipy/components/recipy-constructor/recipy-constructor.component.html
+++ b/src/app/pages/add-recipy/components/recipy-constructor/recipy-constructor.component.html
@@ -127,7 +127,7 @@
           <ion-label>Додати крок</ion-label>
         </ion-item>
         <div class="ion-padding" slot="content">
-          <app-add-step></app-add-step>
+          <app-add-step (addNewStep)="onAddNewStep($event)"></app-add-step>
         </div>
       </ion-accordion>
     </ion-accordion-group>
