--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,15 @@
               Додати рецепт
             </ion-label>
           </ion-item>
-        </ion-menu-toggle>       
+        </ion-menu-toggle>    
+        <ion-menu-toggle autoHide="false">
+          <ion-item routerLink="/tabs/draft-recipies" routerLinkActive="active" routerDirection="root" detail="false">
+            <ion-icon slot="start" name="document-text-outline"></ion-icon>
+            <ion-label>
+              Чернетки рецептів
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>     
         <ion-menu-toggle autoHide="false">
           <ion-item button (click)="logout()" detail="false">
             <ion-icon slot="start" name="log-out"></ion-icon>
