--- a/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.scss
+++ b/src/app/shared/components/recipy-constructor/add-ingredient/add-ingredient.component.scss
@@ -1,6 +1,7 @@
 .ng-autocomplete {
-    height: 400px;
+    height: 300px;
     width: 100%;    
+    overflow-y: auto;
 }
 
 ::ng-deep .ng-autocomplete .suggestions-container.is-visible {
