--- a/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
+++ b/src/app/pages/recipies/components/recipy-short-view/recipy-short-view.component.html
@@ -57,6 +57,9 @@
         collection
       }}</ion-chip>
     </div>
+    <div>
+      Автор: {{ recipy.author }}
+    </div>
 
     <div class="actions-pane">
       <ion-button (click)="goFullRecipy()">
