--- a/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
+++ b/src/app/pages/recipies/pages/full-recipy-page/full-recipy-page.component.html
@@ -1,6 +1,13 @@
 <app-header>
   <ion-back-button left-button defaultHref="tabs/recipies"></ion-back-button>
-  <p title>{{ (recipy$ | async)!.name }}</p>
+  <p title *ngIf="recipy$ | async">{{ (recipy$ | async)!.name }}</p>
+  <ion-button
+    *ngIf="isOwnRecipy$ | async"
+    right-button
+    size="small"
+    (click)="goEditRecipy()"
+    ><ion-icon name="construct-outline" slot="icon-only"></ion-icon
+  ></ion-button>
 </app-header>
 
 <ion-content>
