--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
       <ng-content select="[title]"></ng-content>
     </ion-title>
     <ion-buttons slot="end">
-      
+      <ng-content select="[right-button]"></ng-content>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
