--- a/src/app/pages/admin/admin.page.html
+++ b/src/app/pages/admin/admin.page.html
@@ -7,5 +7,12 @@
 </app-header>
 
 <ion-content [fullscreen]="true">
+  <ion-list>
+    <ion-item *ngFor="let page of pages" [routerLink]="'/tabs/admin/' + page.path" routerDirection="forward">
+      <ion-label>
+        {{page.name}}
+      </ion-label>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
