--- a/src/app/pages/admin/pages/products/products.component.html
+++ b/src/app/pages/admin/pages/products/products.component.html
@@ -1,11 +1,11 @@
 <app-header>
-  <ion-back-button
-    left-button
-    defaultHref="tabs/admin"
-  ></ion-back-button>
+  <ion-back-button left-button defaultHref="tabs/admin"></ion-back-button>
   <span title>Продукти</span>
 </app-header>
 
 <ion-content [fullscreen]="true">
-
+  <app-admin-table
+    *ngIf="!!(products$ | async)"
+    [data]="productsTableData"
+  ></app-admin-table>
 </ion-content>
