--- a/src/app/pages/admin/components/admin-table/admin-table.component.scss
+++ b/src/app/pages/admin/components/admin-table/admin-table.component.scss
@@ -14,6 +14,7 @@
     }
   }
   td {
+    user-select: text;
     border: 1px solid var(--ion-color-light);
     padding: 5px 10px;
     z-index: 1;
