--- a/src/app/pages/admin/pages/products/products.component.html
+++ b/src/app/pages/admin/pages/products/products.component.html
@@ -4,6 +4,7 @@
 </app-header>
 
 <ion-content [fullscreen]="true">
+  <!-- <ion-button (click)="runUpdate()">Update</ion-button> -->
   <app-admin-table
     *ngIf="!!(products$ | async)"
     [data]="productsTableData"
