--- a/src/app/pages/admin/pages/add-product/add-product.component.html
+++ b/src/app/pages/admin/pages/add-product/add-product.component.html
@@ -25,6 +25,11 @@
       <ion-input formControlName="calories" type="tel"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <ion-label position="floating">Коефіцієнт зміни кількості при приготуванні</ion-label>
+      <ion-input formControlName="sizeChangeCoef" type="tel"></ion-input>
+    </ion-item>
+
     <ion-accordion-group>
       <ion-accordion value="first">
         <ion-item
