filter modal setup

--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -1,5 +1,6 @@
 <app-header>
   <span title>Всі рецепти</span>
+<app-filters right-button></app-filters>
 </app-header>
 
 <ion-content [fullscreen]="true">
