--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -1,3 +1,23 @@
-<p>
-  filters works!
-</p>
+<ion-button id="filters-modal"
+  >
+  <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
+</ion-button>
+
+<ion-modal trigger="filters-modal">
+  <ng-template>
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button (click)="cancel()">Скасувати</ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+          <ion-button (click)="confirm()">Застосувати</ion-button>
+        </ion-buttons>
+        <ion-title>Фільтри</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+
+    </ion-content>
+  </ng-template>
+</ion-modal>
