--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -1,5 +1,4 @@
-<ion-button id="filters-modal"
-  >
+<ion-button id="filters-modal">
   <ion-icon slot="icon-only" name="filter-outline"></ion-icon>
 </ion-button>
 
@@ -17,7 +16,52 @@
       </ion-toolbar>
     </ion-header>
     <ion-content class="ion-padding">
-
+      <h3>Знайдено {{ filtersService.filteredRecipies }} рецептів</h3>
+      <ion-accordion-group>
+        <ion-accordion value="first">
+          <ion-item slot="header" color="light">
+            <ion-label>Показати рецепти з інгридієнтами:</ion-label>
+          </ion-item>
+          <div class="ion-padding accordion-content" slot="content">
+            <app-product-autocomplete
+              #withAutocomplete
+              *ngIf="products$ | async"
+              [products]="products"
+              (productSelected)="addToDisplayWith($event)"
+            ></app-product-autocomplete>
+          </div>
+        </ion-accordion>
+        <ion-accordion value="second">
+          <ion-item slot="header" color="light">
+            <ion-label>Не показувати рецепти з інгридієнтами:</ion-label>
+          </ion-item>
+          <div class="ion-padding accordion-content" slot="content">
+            <app-product-autocomplete
+              #withoutAutocomplete
+              *ngIf="products$ | async"
+              [products]="products"
+              (productSelected)="addToDisplayWithout($event)"
+            ></app-product-autocomplete>
+          </div>
+        </ion-accordion>
+        <ion-accordion value="third">
+          <ion-item slot="header" color="light">
+            <ion-label>Пошук за типом страв</ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <ion-list>
+              <ion-item *ngFor="let tag of tags">
+                <ion-label>{{ getTagsText(tag) }}</ion-label>
+                <ion-checkbox
+                  slot="end"
+                  [checked]="(checkedTags$ | async)?.includes(tag)"
+                  (ionChange)="onTagCheck(tag)"
+                ></ion-checkbox>
+              </ion-item>
+            </ion-list>
+          </div>
+        </ion-accordion>
+      </ion-accordion-group>
     </ion-content>
   </ng-template>
 </ion-modal>
