--- a/src/app/filters/components/active-filters-widget/active-filters-widget.component.html
+++ b/src/app/filters/components/active-filters-widget/active-filters-widget.component.html
@@ -1,3 +1,46 @@
-<p>
-  active-filters-widget works!
-</p>
+<div *ngIf="!!currentFilters" class="wrapper">
+  <div
+    class="title"
+    *ngIf="
+      currentFilters.ingredientsToInclude.length ||
+      currentFilters.ingredientsToExclude.length ||
+      currentFilters.tags.length ||
+      !!currentFilters.maxPrepTime
+    "
+  >
+    <div
+      class="ingreds-to-include"
+      *ngIf="currentFilters.ingredientsToInclude.length"
+    >
+      <ion-chip
+        *ngFor="let tag of currentFilters.ingredientsToInclude"
+        (click)="removeIngrToInclude(tag)"
+      >
+        <ion-label>{{ getIngredientText(tag) }}</ion-label>
+        <ion-icon name="close"></ion-icon>
+      </ion-chip>
+    </div>
+
+    <div
+      class="ingreds-to-exclude"
+      *ngIf="currentFilters.ingredientsToExclude.length"
+    >
+      <ion-chip
+        *ngFor="let tag of currentFilters.ingredientsToExclude"
+        (click)="removeIngrToExclude(tag)"
+      >
+        <ion-label>{{ getIngredientText(tag) }}</ion-label>
+        <ion-icon name="close"></ion-icon>
+      </ion-chip>
+    </div>
+    <div class="tags" *ngIf="currentFilters.tags.length">
+      <ion-chip
+        *ngFor="let tag of currentFilters.tags"
+        (click)="removeTag(tag)"
+      >
+        <ion-label>{{ getTagsText(tag) }}</ion-label>
+        <ion-icon name="close"></ion-icon>
+      </ion-chip>
+    </div>
+  </div>
+</div>
