--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -7,7 +7,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-buttons slot="start">
-          <ion-button (click)="cancel()">Скасувати</ion-button>
+          <ion-button (click)="cancel()">Скинути</ion-button>
         </ion-buttons>
         <ion-buttons slot="end">
           <ion-button (click)="confirm()">Застосувати</ion-button>
