--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
@@ -1,4 +1,5 @@
-<ng-autocomplete
+<div class="ng-autocomplete">
+  <ng-autocomplete
   #autocomplete
   [data]="products"
   [searchKeyword]="keyword"
@@ -17,3 +18,4 @@
 <ng-template #notFoundTemplate let-notFound>
   <div [innerHTML]="notFound"></div>
 </ng-template>
+</div>
