--- a/src/app/shared/components/recipy-constructor/recipy-constructor.component.html
+++ b/src/app/shared/components/recipy-constructor/recipy-constructor.component.html
@@ -38,13 +38,13 @@
         </ion-item>
         <div class="ion-padding" slot="content">
           <ion-list>
-            <ion-item *ngFor="let tag of tags">
-              <ion-checkbox
-                slot="end"
-                [checked]="selectedTags.includes(tag)"
-                (ionChange)="onTagClicked($event, tag)"
-              ></ion-checkbox>
+            <ion-item *ngFor="let tag of tags" (click)="onTagClicked(tag)">
               <ion-label>{{ getTagsText(tag) }}</ion-label>
+              <ion-icon
+                *ngIf="selectedTags.includes(tag)"
+                slot="end"
+                name="checkmark-outline"
+              ></ion-icon>
             </ion-item>
           </ion-list>
         </div>
