--- a/src/app/pages/admin/pages/add-product/add-product.component.html
+++ b/src/app/pages/admin/pages/add-product/add-product.component.html
@@ -54,7 +54,7 @@
           slot="header"
           [color]="productForm.controls['type'].valid ? 'tertiary' : 'light'"
         >
-          <ion-label>Виберіть ти продукту</ion-label>
+          <ion-label>Виберіть тип продукту</ion-label>
         </ion-item>
         <div class="ion-padding" slot="content">
           <ion-radio-group formControlName="type">
